<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToUseAppActivity"
    android:layout_marginRight="5dp"
    >
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/cancel"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:onClick="close"
        />
<TextView
    android:id="@+id/tx1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tx1"
    android:textSize="30sp"
    android:layout_marginLeft="10dp"
    android:textStyle="bold"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:gravity="center"
    android:maxLines="2"
    />


<TextView
    android:id="@+id/tx2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tx2"
    android:layout_below="@id/tx1"
    android:layout_marginTop="10dp"
    android:textStyle="italic"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    />
    <TextView
        android:id="@+id/tx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx3"
        android:layout_below="@id/tx2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:id="@+id/tx4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/tx3"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        />
    <TextView
        android:id="@+id/tx5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx5"
        android:layout_below="@id/tx4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img1"
        android:layout_below="@id/tx5"
        />
    <ImageView
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img2"
        android:layout_below="@id/img1"
        />
    <TextView
        android:id="@+id/tx6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx6"
        android:layout_below="@id/img2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="2dp"
        />
    <ImageView
        android:id="@+id/img3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img10"
        android:layout_below="@id/tx6"
        />
    <TextView
        android:id="@+id/tx7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx7"
        android:layout_below="@id/img3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <ImageView
        android:id="@+id/img4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img6"
        android:layout_below="@id/tx7"
        />
    <ImageView
        android:id="@+id/img5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img4"
        android:layout_below="@id/img4"
        />
    <TextView
        android:id="@+id/tx8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx8"
        android:layout_below="@id/img5"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <ImageView
        android:id="@+id/img6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img8"
        android:layout_below="@id/tx8"
        />
    <TextView
        android:id="@+id/tx9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx9"
        android:layout_below="@id/img6"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <ImageView
        android:id="@+id/img7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img9"
        android:layout_below="@id/tx9"
        />
    <TextView
        android:id="@+id/tx10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx10"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/img7"
        />

    <View
        android:id="@+id/empty_space"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/tx10"
        />

</RelativeLayout>

</ScrollView>